--- a/Search_an_element_in_an_array.ipynb
+++ b/Search_an_element_in_an_array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPJzt8wZ21pcy7uIBbHeEB",
+      "authorship_tag": "ABX9TyPY3sP3CwFWAADVHD+EfQLl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,9 +78,52 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "def main():\n",
+        "  T = int(input())\n",
+        "  while (T>0):\n",
+        "    N = int(input())\n",
+        "\n",
+        "    A = [int(x) for x in input().strip().split()]\n",
+        "\n",
+        "    x = int(input())\n",
+        "    ob = Solution()\n",
+        "    print(ob.search(A,N,x))\n",
+        "\n",
+        "    T -=1\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jZPAhsWRBZi9",
+        "outputId": "40eb0427-f09e-4842-b0f0-0b32c9714a17"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "1 2 3 4\n",
+            "3\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jZPAhsWRBZi9"
+        "id": "xe4I5E3-CN2K"
       },
       "execution_count": null,
       "outputs": []
