--- a/Recursion_print_1_to_n.ipynb
+++ b/Recursion_print_1_to_n.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzRL3h4JiFGJTVZW4FDyLL",
+      "authorship_tag": "ABX9TyOnimjwOrEOYDd0S5aYfKSX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +48,48 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "def printNos(x: int) -> List[int]:\n",
+        "    # Write your code here\n",
+        "    if x == 0:\n",
+        "        return []\n",
+        "    else:\n",
+        "\n",
+        "        return printNos(x-1) + [x]\n",
+        "    pass"
+      ],
       "metadata": {
         "id": "yRzD3_u5Ehfu"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "def sumFirstN(n: int) -> int:\n",
+        "    # Write your code here.\n",
+        "    if n == 0:\n",
+        "        return 0\n",
+        "    else:\n",
+        "        return sumFirstN(n-1) +n\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "844LZEOHIKJB"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kFoXLKbIKPOn"
       },
       "execution_count": null,
       "outputs": []
