--- a/Hashing_frequency_of_list.ipynb
+++ b/Hashing_frequency_of_list.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJMcidB/AysnZw7Jrs08ur",
+      "authorship_tag": "ABX9TyNJGTVdC9r9VTf2nhOY6rK7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,9 +61,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from typing import List\n",
+        "from collections import Counter\n",
+        "\n",
+        "def getFrequencies(v: List[int]) -> List[int]:\n",
+        "    # Count the frequency of each element\n",
+        "    freq = Counter(v)\n",
+        "\n",
+        "    # Find the highest and lowest frequency\n",
+        "    max_freq = max(freq.values())\n",
+        "    min_freq = min(freq.values())\n",
+        "\n",
+        "    # Find the smallest element with the highest and lowest frequency\n",
+        "    max_freq_elem = min(k for k, v in freq.items() if v == max_freq)\n",
+        "    min_freq_elem = min(k for k, v in freq.items() if v == min_freq)\n",
+        "\n",
+        "    return [max_freq_elem, min_freq_elem]\n"
+      ],
       "metadata": {
         "id": "6dJPwVn8Qor1"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Xprq7vnVSjHI"
       },
       "execution_count": null,
       "outputs": []
