--- a/get_second_largest_in_array.ipynb
+++ b/get_second_largest_in_array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDY+UeKW3mq8ch52GcKM6S",
+      "authorship_tag": "ABX9TyMeJ03bbiTNPBYXr1blAWAH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "BtIxHla6iL7M"
       },
@@ -61,12 +61,29 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "\n",
+        "def getSecondOrderElements(n: int,  a: [int]) -> [int]:\n",
+        "    # Write your code here.\n",
+        "    max1 = max2 = float('-inf')\n",
+        "    min1 = min2 = float('inf')\n",
+        "    for num in a:\n",
+        "        if num > max1:\n",
+        "            max2 = max1\n",
+        "            max1 = num\n",
+        "        elif max1>num>max2:\n",
+        "            max2 = num\n",
+        "        if num < min1:\n",
+        "            min2 = min1\n",
+        "            min1 = num\n",
+        "        elif min1<num<min2:\n",
+        "            min2 = num\n",
+        "\n",
+        "    return max2,min2"
       ],
       "metadata": {
         "id": "6dJPwVn8Qor1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
