--- a/find_the_missing_number.ipynb
+++ b/find_the_missing_number.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3nUVZdkzwpQ2JJvV9I7Cq",
+      "authorship_tag": "ABX9TyOYLxLp3aHMSF9RfhdTnqHW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,60 +82,46 @@
     {
       "cell_type": "code",
       "source": [
-        "def missingNumber(nums: list[int]) -> int:\n",
-        "    xor1 = 0\n",
-        "    xor2 = 0\n",
-        "    l = len(nums)\n",
-        "    for i in range(l):\n",
-        "        xor1 = xor1 ^ i\n",
-        "        xor2 = xor2 ^ nums[i]\n",
+        "def read(n: int, book: [int], target: int) -> str:\n",
+        "    # Write your code here.\n",
+        "    seen = {}\n",
         "\n",
-        "    xor1 = xor1 ^ l\n",
-        "    return xor1 ^ xor2\n",
-        "\n"
+        "    for i,num in enumerate(book):\n",
+        "        if target - num in seen:\n",
+        "            return  \"YES\"\n",
+        "\n",
+        "        elif num not in seen:\n",
+        "            seen[num] = i\n",
+        "\n",
+        "    return \"NO\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "    pass"
       ],
       "metadata": {
         "id": "nKEzWC4or9LR"
       },
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "List = [0,1,3]"
-      ],
+      "source": [],
       "metadata": {
         "id": "BTlw6HHNtRaa"
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "missingNumber(List)"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cg7l8KcNtvD5",
-        "outputId": "d6e9f767-c038-499c-cfc0-22a53a58e059"
+        "id": "cg7l8KcNtvD5"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
