--- a/majority_element.ipynb
+++ b/majority_element.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/ghZuZXyJhKpdJwYbV53Z",
+      "authorship_tag": "ABX9TyPvwmQxPcKtGDZXsMBIwXbZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,9 +57,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def maxSubarraySum(arr, n) :\n",
+        "\n",
+        "\t# Your code here\n",
+        "    # return the answer\n",
+        "    maxs = 0\n",
+        "    curs = 0\n",
+        "\n",
+        "    for num in arr:\n",
+        "        curs = max(num,curs+num)\n",
+        "        maxs = max(maxs, curs)\n",
+        "\n",
+        "    return maxs"
+      ],
       "metadata": {
         "id": "y-7hQPESi9sv"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = [1, 2, 7, -4, 3, 2, -10, 9, 1]\n",
+        "\n",
+        "maxSubarraySum(arr,9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EJAgzVTaj7mu",
+        "outputId": "bf756d31-93b7-4a18-ce57-26fcc2aeaa1d"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "apvFm75hkIdE"
       },
       "execution_count": null,
       "outputs": []
