--- a/Untitled16.ipynb
+++ b/Untitled16.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM47TsnDPLC8BXksBbR6gdM",
+      "authorship_tag": "ABX9TyPsd7EsNLWfXMRg8DvHJO4a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,35 +28,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
-        "id": "3Fo7Yl92h5am"
+        "id": "Qxex0V0nuHX1"
       },
       "outputs": [],
       "source": [
-        "class Solution:\n",
-        "    def count(self, coins, n, sum):\n",
-        "        dp = [[0 for _ in range(sum+1)] for _ in range(n+1)]\n",
+        "def bestTimeToBuyAndSellStock(prices: [int]) -> int:\n",
+        "    min1 =float('inf')\n",
+        "    max1 = 0\n",
+        "    for i in range(len(prices)):\n",
+        "        if prices[i] < min1:\n",
+        "            min1 = prices[i]\n",
         "\n",
-        "        for i in range(n+1):\n",
-        "            dp[i][0] = 1\n",
+        "        if prices[i] - min1 >= max1:\n",
+        "            max1 = prices[i] - min1\n",
         "\n",
-        "        for i in range(1,n+1):\n",
-        "            for j in range(1, sum+1):\n",
-        "                if coins[i-1] > j:\n",
-        "                    dp[i][j] = dp[i-1][j]\n",
-        "\n",
-        "                else:\n",
-        "                    dp[i][j] = dp[i-1][j] +dp [i][j - coins[i-1]]\n",
-        "\n",
-        "        return dp[n][sum]"
+        "    return max1"
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "X_3qJtswh6gu"
+        "id": "c1Tfs0UYuKUr"
       },
       "execution_count": null,
       "outputs": []
