--- a/recursive_fibinacci.ipynb
+++ b/recursive_fibinacci.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBMGc+xLCnqJEb3bnj2HO3",
+      "authorship_tag": "ABX9TyMrAmRWW1HyB6mqaxbD9gsR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,20 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGO2FuPVd4bj",
-        "outputId": "4b234cfb-deec-4e1b-ab6d-39849559488c"
+        "outputId": "b89365dd-3aa1-49c5-9ff4-aa5afff7e84d"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "8\n"
+            "39088169\n"
           ]
         }
       ],
@@ -58,15 +58,61 @@
         "\n",
         "# Driver Code\n",
         "if __name__=='__main__':\n",
-        "    n = 6\n",
+        "    n = 38\n",
         "    print (fib(n))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "term = [0 for i in range(1000)]\n",
+        "\n",
+        "def fib(n):\n",
+        "  if n <= 1:\n",
+        "    return n\n",
+        "\n",
+        "  if term[n] != 0:\n",
+        "    return term[n]\n",
+        "\n",
+        "  else:\n",
+        "    term[n] = fib(n-1) + fib(n-2)\n",
+        "    return term[n]"
+      ],
+      "metadata": {
+        "id": "U4XKiqGQeCbE"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 38\n",
+        "print(fib(n))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3gFE-iwnefsp",
+        "outputId": "ba3bfaa6-3ba1-4d33-d076-4eb1513e5f6d"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "39088169\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "U4XKiqGQeCbE"
+        "id": "NOUwjDCffJbH"
       },
       "execution_count": null,
       "outputs": []
