--- a/find_ceil_and_floor_in_binary_search.ipynb
+++ b/find_ceil_and_floor_in_binary_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz2ELxsuMJi/2DimF6TF2j",
+      "authorship_tag": "ABX9TyMO8LZB5JWZIf9n4n5rSxrA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,36 +34,53 @@
       },
       "outputs": [],
       "source": [
+        "\\def findFloor(arr, n, x):\n",
+        "    low = 0\n",
+        "    high = n - 1\n",
+        "    ans = -1\n",
         "\n",
-        "def firstAndLastPosition(arr, n, k):\n",
-        "    first = -1\n",
-        "    last = -1\n",
-        "\n",
-        "    start = 0\n",
-        "    end = n - 1\n",
-        "    while start <= end:\n",
-        "        mid = (start + end) // 2\n",
-        "        if arr[mid] == k:\n",
-        "            first = mid\n",
-        "            end = mid - 1\n",
-        "        elif arr[mid] < k:\n",
-        "            start = mid + 1\n",
+        "    while low <= high:\n",
+        "        mid = (low + high) // 2\n",
+        "        # maybe an answer\n",
+        "        if arr[mid] <= x:\n",
+        "            ans = arr[mid]\n",
+        "            # look for smaller index on the left\n",
+        "            low = mid + 1\n",
         "        else:\n",
-        "            end = mid - 1\n",
+        "            high = mid - 1  # look on the right\n",
         "\n",
-        "    start = 0\n",
-        "    end = n - 1\n",
-        "    while start <= end:\n",
-        "        mid = (start + end) // 2\n",
-        "        if arr[mid] == k:\n",
-        "            last = mid\n",
-        "            start = mid + 1\n",
-        "        elif arr[mid] < k:\n",
-        "            start = mid + 1\n",
+        "    return ans\n",
+        "\n",
+        "\n",
+        "def findCeil(arr, n, x):\n",
+        "    low = 0\n",
+        "    high = n - 1\n",
+        "    ans = -1\n",
+        "\n",
+        "    while low <= high:\n",
+        "        mid = (low + high) // 2\n",
+        "        # maybe an answer\n",
+        "        if arr[mid] >= x:\n",
+        "            ans = arr[mid]\n",
+        "            # look for smaller index on the left\n",
+        "            high = mid - 1\n",
         "        else:\n",
-        "            end = mid - 1\n",
+        "            low = mid + 1  # look on the right\n",
         "\n",
-        "    return first, last\n"
+        "    return ans\n",
+        "\n",
+        "\n",
+        "def getFloorAndCeil(arr, n, x):\n",
+        "    f = findFloor(arr, n, x)\n",
+        "    c = findCeil(arr, n, x)\n",
+        "    return (f, c)\n",
+        "\n",
+        "\n",
+        "arr = [3, 4, 4, 7, 8, 10]\n",
+        "n = 6\n",
+        "x = 5\n",
+        "ans = getFloorAndCeil(arr, n, x)\n",
+        "print(\"The floor and ceil are:\", ans[0], ans[1])"
       ]
     },
     {
