--- a/search_in_a_rotated_array.ipynb
+++ b/search_in_a_rotated_array.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBwRQ9hF8uE4FDYMe2rgmm",
+      "authorship_tag": "ABX9TyOqMYEGmRqQBW4P3x8/kSHz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "Oe5PzhzjN95N"
       },
@@ -56,6 +56,58 @@
         "\n",
         "    return -1"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for edge cases and not unique elements\n",
+        "from typing import *\n",
+        "\n",
+        "def searchInARotatedSortedArrayII(A : List[int], key : int) -> bool:\n",
+        "    # Write your code here.\n",
+        "    low = 0\n",
+        "    high = len(A)-1\n",
+        "\n",
+        "    while(low <= high):\n",
+        "        mid = (low +high)//2\n",
+        "        if(A[mid] == key):\n",
+        "            return True\n",
+        "        if (A[low] == A[mid] and A[mid] == A[high]):\n",
+        "            low = low+1\n",
+        "            high = high -1\n",
+        "            continue\n",
+        "\n",
+        "        if (A[low] <= A[mid]):\n",
+        "            if A[low] <= key and key <= A[mid]:\n",
+        "                high = mid-1\n",
+        "\n",
+        "            else:\n",
+        "                low = mid+1\n",
+        "\n",
+        "        else:\n",
+        "            if A[mid] <= key and key <= A[high]:\n",
+        "                low = mid +1\n",
+        "\n",
+        "            else:\n",
+        "                high = mid -1\n",
+        "\n",
+        "    return False\n",
+        "    pass"
+      ],
+      "metadata": {
+        "id": "feYSfzHZWMdG"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tRNYWZLaWRw5"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
