--- a/Find_the_peak_of_an_element.ipynb
+++ b/Find_the_peak_of_an_element.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjzYBNC6p+jfj7qJ8/HRy3",
+      "authorship_tag": "ABX9TyNe39GiRcxSH892SkcGfbf5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,42 +28,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "DeGpwBnyyBt8"
       },
       "outputs": [],
       "source": [
-        "def singleNonDuplicate(arr):\n",
+        "def findPeakElement(arr: [int]) -> int:\n",
         "    # Write your code here\n",
-        "    n = len(arr)\n",
-        "    if n == 1:\n",
+        "    n= len(arr)\n",
+        "\n",
+        "    if n==1:\n",
         "        return arr[0]\n",
         "\n",
-        "    if (arr[0] != arr[1]):\n",
-        "        return arr[0]\n",
-        "\n",
-        "    if (arr[n-1] !=  arr[n-2]):\n",
-        "        return arr[n-1]\n",
+        "    if arr[0] > arr[1]:\n",
+        "        return 0\n",
+        "    if arr[n-1] > arr[n-2]:\n",
+        "        return n-1\n",
         "\n",
         "    low = 1\n",
         "    high = n-2\n",
         "\n",
         "    while (low <= high):\n",
-        "        mid = (low +high)//2\n",
+        "        mid = (low + high)//2\n",
         "\n",
-        "        if (arr[mid] != arr[mid +1] and arr[mid] != arr[mid-1]):\n",
-        "            return arr[mid]\n",
-        "\n",
-        "        if (mid %2 == 1 and arr[mid]== arr [mid-1]) or (mid%2 == 0 and arr[mid]== arr[mid+1]):\n",
+        "        if (arr[mid] > arr[mid-1]and arr[mid] > arr[mid+1]):\n",
+        "            return mid\n",
+        "        elif ( arr [mid] > arr[mid -1]):\n",
         "            low = mid +1\n",
         "        else:\n",
-        "            high = mid-1\n",
+        "            high = mid -1\n",
         "\n",
         "    return -1\n",
         "\n",
-        "\n",
-        "\n"
+        "    pass\n"
       ]
     },
     {
